<resources>
    <string name="app_name">Trips</string>
    <string name="api_url">http://192.168.0.250:8080/api/</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="nav_header_title">Trips</string>
    <string name="nav_header_subtitle">Everyone needs to learn</string>
    <string name="action_settings">Settings</string>
    <string name="nav_learning">Astuces</string>
    <string name="nav_profile">Mon profil</string>
    <string name="nav_user_learning">Mes astuces</string>
    <string name="nav_contact">Nous contacter</string>
    <string name="nav_firm_title">Société</string>
    <string name="nav_parameters">Paramètres</string>
    <string name="nav_deconnexion">Déconnexion</string>

    <string name="hint_comment">Tapez votre comentaire</string>
    <string name="hint_email">Adresse Mail</string>
    <string name="hint_password">Mot de passe</string>
    <string name="hint_firstname">Nom</string>
    <string name="hint_lastname">Prénom</string>
    <string name="hint_country">Pays</string>
    <string name="hint_pseudo">Pseudo</string>
    <string name="btn_login">S\'inscrire</string>
    <string name="btn_forgot_password">Vous avez oublié votre mot de passe ?</string>
    <string name="btn_register">Se connecter</string>
    <string name="btn_link_to_login">Déjà inscrit ? Connectez-vous</string>
    <string name="btn_link_to_register">Pas encore Inscrit ? Inscrivez-vous</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="most_recent_tricks">Tips les plus récents</string>
    <string name="most_viewed_tricks">Tips les plus consultés</string>
    <string name="title_activity_tricks">TricksActivity</string>
    <string name="title_activity_tricks_list">Astuces</string>
    <string name="nav_user_finished_tricks">Astuces terminées</string>
    <string name="nav_user_followed_tricks">Astuces en cours</string>
    <string name="nav_home">Accueil</string>
    <string name="nav_parameters_title">Paramètres</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="mark_title">Notez l\'astuce !</string>
    <string name="button_trick_finished">J\ai suivi l\'astuce !</string>action_search
    <string name="action_search">Chercher une Astuce</string>
    <string name="sort_title">Tris :</string>
    <string name="date_sort">Ancienneté</string>
    <string name="name_sort">Nom</string>
    <string name="mark_sort">Note</string>

</resources>
