<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_tricks"
            android:icon="@drawable/learn"
            android:title="@string/nav_learning" />
        <item
            android:id="@+id/nav_my_tricks"
            android:icon="@drawable/learning"
            android:title="@string/nav_user_learning" />
        <item
            android:id="@+id/nav_parameter"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_parameters" />
    </group>

    <item android:title="@string/nav_firm_title">
        <menu>
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/info"
                android:title="@string/nav_contact" />
        </menu>
    </item>

</menu>
