<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ProfileActivity"
    android:background="@drawable/side_nav_bar"
    android:orientation="vertical"
    android:layout_gravity="center"
    >

    <EditText
        android:id="@+id/profilePasswordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/profileMailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_email"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/profileFirstNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_firstname"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"/>


    <EditText
        android:id="@+id/profileLastNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_lastname"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/TripsLightAquaBlue"
        android:text="Enregistrer Modifications"
        android:layout_gravity="center"/>


</LinearLayout>