<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activities.TricksListActivity"
    tools:showIn="@layout/activity_tricks_list"
    android:orientation="vertical"
    android:background="@drawable/side_nav_bar"
    android:layout_gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <SearchView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/action_search"
            android:hint="@string/action_search"
            android:layout_weight="1">

        </SearchView>
        <Spinner
            android:id="@+id/categorySpinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@color/TripsAquaBlue"
            android:id="@+id/sortByNameButton"
            android:hint="@string/name_sort"
            android:layout_weight="1" />
        <Button
            android:id="@+id/sortMarkButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@color/TripsAquaBlue"
            android:hint="@string/mark_sort"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/sortDateButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@color/TripsAquaBlue"
            android:hint="@string/date_sort"
            android:layout_weight="3"
            />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/trickListRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/side_nav_drawer"
        android:textAlignment="center"
        android:layout_gravity="center"
        />


</LinearLayout>